--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
     </footer>
     <div id="final">
-        Desenvolvido por <a href="#" target="_blank">João Paulo</a> na trilha Start na Programação da OneBitCode 
+        Desenvolvido por <a href="#" target="_blank">João Paulo</a> na trilha Start na Programação da OneBitCode !
     </div>
 
     <script src="js/index.js"></script>
